src/Components/LoadingSpinner/LoadingSpinner.css
.lds-dual-ring {
    display: inline-block;
    width: 40px;
    height: 40px;
    margin: auto;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 32px;
    height: 32px;
    margin: 1px;
    border-radius: 50%;
    border: 3px solid rgb(96, 125, 139);
    border-color: rgb(96, 125, 139) transparent rgb(96, 125, 139) transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  

